# lre-adversarial-ml-ugr16

./: .gitignore  README.md  pyproject.toml  requirements.txt
adversarial/: adversarial.ipynb  performance_after_attack.csv  performance_after_attack_after_fix.csv  performance_after_attack_after_fix_encoded.csv  performance_after_attack_before_fix.csv  performance_after_attack_before_fix_encoded.csv
model/: model.ipynb  performance-small.csv
preprocessing/: concat.ipynb  count-calibration.sh  count-test.sh  count.py  extract-calibration.sh  extract-test.sh  extract.py  random_index.ipynb
preprocessing/count/: count.py
preprocessing/extract/: extract-test.sh
preprocessing/normalize/: describe-train-ugr16-base.csv  describe-train-ugr16-large.csv  describe-train-ugr16-small.csv  normalize.ipynb
report/: report.md
