[tool.poetry]
name = "mlsecu"
version = "0.1.0"
description = "A research project to train a network to detect attacks in data streams and then attempt to fool it using adversarial machine learning"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.5"
pandas = "^1.4.2"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
adversarial-robustness-toolbox = "^1.10.0"
sklearn = "^0.0"
ipykernel = "^6.13.0"
tqdm = "^4.64.0"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
plotly = "^5.7.0"
xgboost = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
